[package]
name = "polar_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1.37"
dtparse = "*"
polars = { git = "https://github.com/pola-rs/polars", features = ["csv-file", "pretty_fmt", "temporal", "dtype-date", "dtype-datetime", "lazy", "interpolate", "dynamic_groupby", "diff", "rows"] }